# grpc-sentiment-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deployment.yml  main.yml
examples/: client.py
old/: sentiment_pb2_grpc.py
old/libs/sentiment_analyzers/analyzers/: base_analyzer.py
old/libs/sentiment_analyzers/analyzers/eng/: sentiment_analyzer.py
scripts/: gen_protos.sh
server_py/: requirements.txt  server.py  server_simple.py
server_py/libs/sentiment_analyzers/analyzers/dan/: sentiment_analyzer.py
server_py/libs/sentiment_analyzers/analyzers/hun/: sentiment_analyzer.py
server_py/libs/sentiment_analyzers/factory/: sentiment_factory.py
src/client/: main.py
src/libs/: functions.py
src/libs/sentiment_analyzers/analyzers/: base_analyzer.py
src/libs/sentiment_analyzers/analyzers/dan/: sentiment_analyzer.py
src/libs/sentiment_analyzers/analyzers/eng/: sentiment_analyzer.py
src/libs/sentiment_analyzers/analyzers/hun/: sentiment_analyzer.py
src/pb/: sentiment_pb2.py  sentiment_pb2_grpc.py
src/proto/: sentiment.proto
src/server/: main.py
